makes Save update JSON with PHP, starts duplicate but copy is getting dupes error

--- a/app/pages/intro.html
+++ b/app/pages/intro.html
@@ -34,7 +34,7 @@
 						<td>{{ contact.name }}</td>
 						<td>{{ contact.email }}</td>
 						<td>{{ contact.phone }}</td>
-						<td> <a href="javascript:void(0)" ng-click="edit(contact.id)">edit</a> | <a href="javascript:void(0)" ng-click="delete(contact.id)">delete</a>
+						<td> <a href="javascript:void(0)" ng-click="edit(contact.id)">edit</a> <!-- | <a href="javascript:void(0)" ng-click="duplicate(contact.id)">dupe</a> --> | <a href="javascript:void(0)" ng-click="delete(contact.id)">delete</a>
 
 						</td>
 					</tr>
