--- a/app/index.html
+++ b/app/index.html
@@ -30,6 +30,7 @@
 
   <header>
     <h1 id="logo" class="center"><a href="/">DBless</a></h1>
+    <p class="text-center"><a href="jobs.php">view jobs page</a></p>
   </header>
 
   <div id="main">
