--- a/app/pages/intro.html
+++ b/app/pages/intro.html
@@ -4,7 +4,7 @@
 			<form class="well">
 				<div class="form-group">
 					<label>Title</label>
-					<input type="text" class="form-control" name="name" ng-model="newcontact.name" />
+					<input type="text" class="form-control" name="name" ng-model="newcontact.name" required/>
 				</div>
 				<div class="form-group">
 					<label>Responsibilities</label>
@@ -30,7 +30,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr ng-repeat="contact in contacts">
+					<tr ng-hide="!contacts.length" ng-repeat="contact in contacts">
 						<td>{{ contact.name }}</td>
 						<td>{{ contact.email }}</td>
 						<td>{{ contact.phone }}</td>
@@ -38,6 +38,7 @@
 
 						</td>
 					</tr>
+					<p ng-show="!contacts.length" class="error">Clear cache to see list. [command + shift + R]</p>
 				</tbody>
 			</table>
 		</div>
