--- a/app/pages/intro.html
+++ b/app/pages/intro.html
@@ -1,9 +1,9 @@
 <div id="intro" class="container top">
 	<div class="row">
 		<div class="col-md-6">
-			<form class="well">
+			<form class="well" ng-submit="saveContact()">
 				<div class="form-group">
-					<label>Title</label>
+					<label>Title*</label>
 					<input type="text" class="form-control" name="name" ng-model="newcontact.name" required/>
 				</div>
 				<div class="form-group">
@@ -17,6 +17,7 @@
 				<br/>
 				<input type="hidden" ng-model="newcontact.id" />
 				<input type="button" value="Save" ng-click="saveContact()" class="btn btn-primary" />
+				<input type="submit" style="position: absolute; left: -9999px; width: 1px; height: 1px;"/>
 			</form>
 		</div>
 		<div class="col-md-6 content-block">
