edit links between all-jobs and single-job, CSS on table col

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
 
   <header>
     <h1 id="logo" class="center"><a href="/">DBless</a></h1>
-    <p class="text-center"><a href="jobs.php">view jobs page</a></p>
+    <p class="text-center"><a href="jobs/">view jobs page</a></p>
   </header>
 
   <div id="main">
