--- a/app/pages/intro.html
+++ b/app/pages/intro.html
@@ -8,11 +8,19 @@
 					<input type="text" class="form-control" name="title" ng-model="newjob.title" required/>
 				</div>
 				<div class="form-group">
-					<label>Responsibilities</label>
-					<input type="text" class="form-control" name="responsibilities" ng-model="newjob.responsibilities" />
+					<label>Location</label>
+					<input type="text" class="form-control" name="location" ng-model="newjob.location" />
 				</div>
 				<div class="form-group">
-					<label>Description</label>
+					<label>Company Summary</label>
+					<textarea class="form-control" name="summary" ng-model="newjob.summary"></textarea>
+				</div>
+				<div class="form-group">
+					<label>Comp &amp; Benefits</label>
+					<textarea class="form-control" name="benefits" ng-model="newjob.benefits"></textarea>
+				</div>
+				<div class="form-group">
+					<label>Position Profile</label>
 					<textarea class="form-control" name="description" ng-model="newjob.description"></textarea>
 				</div>
 				<br/>
