adds array list of elements by textarea, checks for if items are undefined

--- a/app/pages/intro.html
+++ b/app/pages/intro.html
@@ -18,6 +18,7 @@
 				<div class="form-group">
 					<label>Comp &amp; Benefits</label>
 					<textarea class="form-control" name="benefits" ng-model="newjob.benefits"></textarea>
+					<p class="help-block">Add each entry on its own line.</p>
 				</div>
 				<div class="form-group">
 					<label>Position Profile</label>
