--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>First | DBless</title>
+  <title>Job Board Example | DBless</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
   <!-- fonts -->
